# say_hello

./: README.md  pyproject.toml
hello/scripts/: .say_hello.py.swp  say_poka.py
